# instmuse

./: .git_ignore  Requirements.txt  setup.cfg
src/instmuse/: converters.py  instrument_music.py  stringed_instrument.py
src/instmuse.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: converter_tests.py
