[metadata]
name = strmuse
version = 0.0.1
author = ccn
author_email = ccn@cuppajoeman.com
description = Stringed Instrument Library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/cuppajoeman/strmuse
project_urls =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    numuse

[options.packages.find]
where = src
